added class logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-
+    <header>
+        <!-- this is the header section -->
+        <div class="logo">
+            <img src="logoBig.png" alt="logo">
+            <h1>We Provide</h1>
+            <h1>The Best Food At The <em>Right Price</em></h1>
+        </div>
+    </header>
 </body>
 
 </html>
