added class offers

--- a/index.html
+++ b/index.html
@@ -18,6 +18,27 @@
             <h1>The Best Food At The <em>Right Price</em></h1>
         </div>
     </header>
+    <!-- section containing hotel offers -->
+    <div class="offers">
+        <div class="column-2 column">
+            <div class="hpt happy-hour">
+                <p>Happy Hour</p>
+            </div>
+            <div class=" hpt party-time">
+                <p>Party Time</p>
+            </div>
+        </div>
+        <div class="hover-1 column-2 breakfast">
+            <p class="item 1">Breakfast</p>
+        </div>
+        <div class=" hover-1 column-2 lunch">
+            <p class="item 2">Lunch</p>
+        </div>
+        <div class="hover-1 column-2 dinner">
+            <p class="item 3">Dinner</p>
+        </div>
+
+    </div>
 </body>
 
 </html>
