addedid fast-foods

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
         </div>
 
     </div>
+    <div>
+        <!-- section containing fast-foods -->
+        <div id="fast-food">
+            <div id="images">
+                <img src="/fastFood1.jpg" alt="desert 1">
+                <img src="/fastFood2.jpg" alt="desert 2">
+            </div>
+            <div id="description-1">
+                <h3>Fast Food</h3>
+                <p>You'll love our delicious food</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem similique corporis magni nihil iusto, sunt eveniet quidem a distinctio veritatis officiis nesciunt deserunt, numquam ullam laboriosam nostrum hic beatae blanditiis. Lorem
+                    ipsum dolor, sit amet consectetur adipisicing elit. Ipsum eius libero distinctio suscipit iste temporibus dolorum? Facilis, quas asperiores aliquid illum cupiditate obcaecati! Beatae at natus alias modi esse autem.lorem</p> <a href="/landing.jpg"
+                    class="viewing-1">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+            </div>
+        </div>
 </body>
 
 </html>
