added class menu

--- a/index.html
+++ b/index.html
@@ -54,6 +54,49 @@
                     class="viewing-1">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
             </div>
         </div>
+        <!-- this is a section containing drinks -->
+        <div class="Drinks">
+            <div class="description-2">
+                <div class="drink-images">
+                    <img src="/drink1.jpg" alt="sipping a drink">
+                    <img src="/drink2.jpg" alt="a glass with a drink">
+                </div>
+                <div class="description-3">
+                    <h3>Drinks</h3>
+                    <p>We also produce delicious drinks</p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem similique corporis magni nihil iusto, sunt eveniet quidem a distinctio veritatis officiis nesciunt deserunt, numquam ullam laboriosam nostrum hic beatae blanditiis. Lorem ipsum dolor, sit
+                        amet consectetur adipisicing elit. Ipsum eius libero distinctio suscipit iste temporibus dolorum? Facilis, quas asperiores aliquid illum cupiditate obcaecati! Beatae at natus alias modi esse autem.lorem
+                    </p>
+                    <a href="/landing.jpg" class="viewing-2"><i class="fa fa-arrow-left" aria-hidden="true"></i> VIEW GALLERY</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- customer review section -->
+    <div class="reviews">
+        <div class="customers">
+            <h4>Our Happy Customers</h4>
+            <p>George Richard</p>
+            <p>Great food! Menu is awesome, there foods are not only great, but also in the right price. I'll hoghly recommend them :)</p>
+            <div class="customer-pics">
+                <img src="/p1.png" alt="client1">
+                <img src="/p2.png" alt="client3">
+                <img src="/p3.png" alt="client3">
+            </div>
+        </div>
+
+        <div class="menu">
+            <h4>About Menu</h4>
+            <p>
+                We are a little team of seven members. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, cupiditate? Fugit eius enim placeat velit molestias quos delectus quae quidem neque ipsa! Harum sed illum sunt suscipit nisi. Aspernatur, veritatis.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt a maxime
+            </p>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
