--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
         </div>
 
     </div>
+    <!-- subscribe section -->
+    <div class="subscribe">
+        <form>
+            <p>Get our daily food items delivered to your email</p>
+            <input type="text" placeholder="your email">
+            <a href="#" class="in-subscribe">subscribe</a>
+        </form>
+    </div>
 
 </body>
 
