added facebook png

--- a/index.html
+++ b/index.html
@@ -104,6 +104,18 @@
             <a href="#" class="in-subscribe">subscribe</a>
         </form>
     </div>
+    <!-- footer section -->
+    <footer>
+        <div class="footer">
+            <div class="menu-logo"></div>
+            <img src="/logo_white.png" alt="small logo">
+            <h1>MENU</h1>
+        </div>
+        <p>That's what We Are</p>
+        <div class="icons">
+            <i class="fa fa-facebook">Facebook</i>
+            <!-- <img src="/facebook.png" alt="facebook png"> -->
+
 
 </body>
 
