added twitter png

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         <div class="icons">
             <i class="fa fa-facebook">Facebook</i>
             <!-- <img src="/facebook.png" alt="facebook png"> -->
+            <i class="fa fa-twitter twitter-icon">Twitter</i>
+            <!--  <img src="/twitter.png" alt="twitter png"> -->
 
 
 </body>
