added pinterest png

--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
             <!-- <img src="/facebook.png" alt="facebook png"> -->
             <i class="fa fa-twitter twitter-icon">Twitter</i>
             <!--  <img src="/twitter.png" alt="twitter png"> -->
+            <i class="fa fa-pinterest">pinterest</i>
+            <!--  <img src="/pinterest.png" alt="pinterest png"> -->
 
 
 </body>
