added paragraph menu

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
             <i class="fa fa-pinterest">pinterest</i>
             <!--  <img src="/pinterest.png" alt="pinterest png"> -->
 
+        </div>
+
+        <p>2019,Menu Restaurant</p>
+        </div>
+    </footer>
+
 
 </body>
 
