--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anitas-kitchen</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/692524ab42.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
