modified index.html and sttle.css

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <!-- section containing fast-foods -->
         <div id="fast-food">
             <div id="images">
-                <img src="/fastFood1.jpg" alt="desert 1">
-                <img src="/fastFood2.jpg" alt="desert 2">
+                <img src="fastFood1.jpg" alt="desert 1">
+                <img src="fastFood2.jpg" alt="desert 2">
             </div>
             <div id="description-1">
                 <h3>Fast Food</h3>
                 <p>You'll love our delicious food</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem similique corporis magni nihil iusto, sunt eveniet quidem a distinctio veritatis officiis nesciunt deserunt, numquam ullam laboriosam nostrum hic beatae blanditiis. Lorem
-                    ipsum dolor, sit amet consectetur adipisicing elit. Ipsum eius libero distinctio suscipit iste temporibus dolorum? Facilis, quas asperiores aliquid illum cupiditate obcaecati! Beatae at natus alias modi esse autem.lorem</p> <a href="/landing.jpg"
+                    ipsum dolor, sit amet consectetur adipisicing elit. Ipsum eius libero distinctio suscipit iste temporibus dolorum? Facilis, quas asperiores aliquid illum cupiditate obcaecati! Beatae at natus alias modi esse autem.lorem</p> <a href="landing.jpg"
                     class="viewing-1">VIEW GALLERY <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
             </div>
         </div>
@@ -59,8 +59,8 @@
         <div class="Drinks">
             <div class="description-2">
                 <div class="drink-images">
-                    <img src="/drink1.jpg" alt="sipping a drink">
-                    <img src="/drink2.jpg" alt="a glass with a drink">
+                    <img src="drink1.jpg" alt="sipping a drink">
+                    <img src="drink2.jpg" alt="a glass with a drink">
                 </div>
                 <div class="description-3">
                     <h3>Drinks</h3>
@@ -69,26 +69,60 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem similique corporis magni nihil iusto, sunt eveniet quidem a distinctio veritatis officiis nesciunt deserunt, numquam ullam laboriosam nostrum hic beatae blanditiis. Lorem ipsum dolor, sit
                         amet consectetur adipisicing elit. Ipsum eius libero distinctio suscipit iste temporibus dolorum? Facilis, quas asperiores aliquid illum cupiditate obcaecati! Beatae at natus alias modi esse autem.lorem
                     </p>
-                    <a href="/landing.jpg" class="viewing-2"><i class="fa fa-arrow-left" aria-hidden="true"></i> VIEW GALLERY</a>
+                    <a href="landing.jpg" class="viewing-2"><i class="fa fa-arrow-left" aria-hidden="true"></i> VIEW GALLERY</a>
                 </div>
             </div>
         </div>
 
     </div>
+    <!-- section containing food images -->
+    <div class="menu-bar">
+        <div class="inner-menu">
+            <ul class="our-food">
+                <li>Fast Food
+                    <!--
+        -->
+                    <li>Drinks
+                        <!--
+        -->
+                        <li>Chicken
+                            <!--
+        -->
+                            <li>Rice
+            </ul>
+            <div class="food-tab">
+                <p class="navigator">&lt;</p>
+                <figure>
+                    <img src="chickenBurger.jpg" alt="Chicken Burger">
+                    <figcaption>Chicken Burger</figcaption>
+                </figure>
+                <figure>
+                    <img src="beefBurger.jpg" alt="Beef Burger ">
+                    <figcaption>Beef Burger</figcaption>
+                </figure>
+                <figure>
+                    <img src="chickenPizza.jpg" alt="Chicken Pizza ">
+                    <figcaption>Chicken Pizza</figcaption>
+                </figure>
+                <p class="navigator ">&gt;</p>
+
+            </div>
+        </div>
+    </div>
     <!-- customer review section -->
-    <div class="reviews">
-        <div class="customers">
+    <div class="reviews ">
+        <div class="customers ">
             <h4>Our Happy Customers</h4>
             <p>George Richard</p>
             <p>Great food! Menu is awesome, there foods are not only great, but also in the right price. I'll hoghly recommend them :)</p>
-            <div class="customer-pics">
-                <img src="/p1.png" alt="client1">
-                <img src="/p2.png" alt="client3">
-                <img src="/p3.png" alt="client3">
+            <div class="customer-pics ">
+                <img src="p1.png " alt="client1 ">
+                <img src="p2.png " alt="client3 ">
+                <img src="p3.png " alt="client3 ">
             </div>
         </div>
 
-        <div class="menu">
+        <div class="menu ">
             <h4>About Menu</h4>
             <p>
                 We are a little team of seven members. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, cupiditate? Fugit eius enim placeat velit molestias quos delectus quae quidem neque ipsa! Harum sed illum sunt suscipit nisi. Aspernatur, veritatis.
@@ -98,29 +132,29 @@
 
     </div>
     <!-- subscribe section -->
-    <div class="subscribe">
+    <div class="subscribe ">
         <form>
             <p>Get our daily food items delivered to your email</p>
-            <input type="text" placeholder="your email">
-            <a href="#" class="in-subscribe">subscribe</a>
+            <input type="text " placeholder="your email ">
+            <a href="# " class="in-subscribe ">subscribe</a>
         </form>
     </div>
     <!-- footer section -->
     <footer>
-        <div class="footer">
-            <div class="menu-logo"></div>
-            <img src="/logo_white.png" alt="small logo">
+        <div class="footer ">
+            <div class="menu-logo "></div>
+            <img src="logo_white.png " alt="small logo ">
             <h1>MENU</h1>
             <p>That's what We Are</p>
         </div>
 
-        <div class="icons">
-            <i class="fa fa-facebook">Facebook</i>
-            <!-- <img src="/facebook.png" alt="facebook png"> -->
-            <i class="fa fa-twitter twitter-icon">Twitter</i>
-            <!--  <img src="/twitter.png" alt="twitter png"> -->
-            <i class="fa fa-pinterest">pinterest</i>
-            <!--  <img src="/pinterest.png" alt="pinterest png"> -->
+        <div class="icons ">
+            <i class="fa fa-facebook ">Facebook</i>
+            <!-- <img src="/facebook.png " alt="facebook png "> -->
+            <i class="fa fa-twitter twitter-icon ">Twitter</i>
+            <!--  <img src="/twitter.png " alt="twitter png "> -->
+            <i class="fa fa-pinterest ">pinterest</i>
+            <!--  <img src="/pinterest.png " alt="pinterest png "> -->
             <p>2019,Menu Restaurant</p>
         </div>
 
