--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
         </div>
 
     </div>
+    <!-- this is the menu bar section -->
+    <div class="menu-bar">
+        <div class="inner-menu">
+            <ul class="our-food">
+                <li>Fast food</li>
+                <li>Drinks</li>
+                <li>Chicken</li>
+                <li>Rice</li>
+            </ul>
+            <div class="food-tab">
+
+                <figure>
+                    <img src="/chickenBurger.jpg" alt="chicken with burger">
+                    <figcaption>Chicken Burger</figcaption>
+                </figure>
+                <figure>
+                    <img src="/beefBurger.jpg" alt="Beef with burger">
+                    <figcaption>Beef Burger</figcaption>
+                </figure>
+                <figure>
+                    <img src="/chickenPizza.jpg" alt="chicken with pizza">
+                    <figcaption>Chicken Pizza</figcaption>
+                </figure>
+
+            </div>
+        </div>
+    </div>
     <!-- customer review section -->
     <div class="reviews">
         <div class="customers">
